--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/devtools": "^6.1.4",
+    "autoprefixer": "^10.4.7",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.7",
     "wait-on": "^6.0.1"
   },
